--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=JAVA-School_Bussiness_Tour_Management
+application.vendor=Tai Tue
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/JAVA-School_Bussiness_Tour_Management.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-collections4-4.4.jar=D:\\Languages-Development\\Java\\jar_files\\commons-collections4-4.4.jar
 file.reference.commons-compress-1.19.jar=D:\\Languages-Development\\Java\\jar_files\\commons-compress-1.19.jar
@@ -36,7 +38,7 @@ file.reference.poi-ooxml-4.1.2.jar=D:\\Languages-Development\\Java\\jar_files\\p
 file.reference.poi-ooxml-schemas-4.1.2.jar=D:\\Languages-Development\\Java\\jar_files\\poi-ooxml-schemas-4.1.2.jar
 file.reference.xmlbeans-3.1.0.jar=D:\\Languages-Development\\Java\\jar_files\\xmlbeans-3.1.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.31.jar}:\
     ${file.reference.itextpdf-5.5.9.jar}:\
@@ -70,7 +72,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=java.school_bussiness_tour_management.JAVASchool_Bussiness_Tour_Management
+main.class=application.School_Bussiness_Tour_Management_Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
